[project]
name = "galehuntui"
version = "0.1.0"
description = "Terminal-based Automated Web Pentesting Application"
authors = [
    { name = "Google DeepMind", email = "info@google.com" }
]
requires-python = ">=3.11"
dependencies = [
    "textual>=0.50.0",
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "httpx>=0.25.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
galehuntui = "galehuntui.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
